--- a/src/app/admin/admin-main/admin-unit/admin-unit.component.html
+++ b/src/app/admin/admin-main/admin-unit/admin-unit.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div *ngIf="this.adminUnit === true" class="container-fluid">
     <div class="row">
       <div class="col-md-3">
         <div>{{'unit.code' | translate}}</div>
