--- a/src/app/admin/admin-main/admin-user/admin-detail-user/admin-detail-user.component.html
+++ b/src/app/admin/admin-main/admin-user/admin-detail-user/admin-detail-user.component.html
@@ -2,32 +2,43 @@
     <div class="header">
       <h3 class="label-header">{{this.data.title | translate}}</h3>
     </div>
-    <div class="content">
-        <div class="row">  
-            <div class="col-md-6">  
+    <form [formGroup]="addForm" class="content">
+        <div class="row">
+            <div class="col-md-6">
+
                 <div class="row">
                     <div class="col-md-12">
-                        <div class="label_item">{{'Họ tên' | translate }}</div>
-                        <div>
-                            <div [innerHTML]="datas.name" class="input_text"></div>
+
+                        <div class="label text-color">{{'Họ tên' | translate }} <span class="required-title">*</span></div>
+                        <div class="input-data fff">
+                            <input readonly type="text" formControlName="name">
+                        </div>
+                        <div *ngIf="submitted && f.name.errors" class="invalid">
+                            <div *ngIf="f.name.errors.required">{{'error.unit.name.required' | translate}}</div>
+                            <div *ngIf="f.name.errors.pattern">{{'Tên tổ chức không được chứa ký tự đặc biệt' | translate}}</div>
                         </div>
                     </div>
                 </div>
 
                 <div class="row" style="padding-top: 10px;">
                     <div class="col-md-12">
-                        <div class="label_item">{{'Email' | translate }}</div>
-                        <div>
-                            <div [innerHTML]="datas.email" class="input_text"></div>
+                        <div class="label text-color">{{'Email' | translate }} <span class="required-title">*</span></div>
+                        <div class="input-data" [ngClass]="{
+                            'fff':  this.data.id != null}">
+                            <input type="text" formControlName="email">
+                        </div>
+                        <div *ngIf="submitted && f.email.errors" class="invalid">
+                            <div *ngIf="f.email.errors.required">{{'error.user.email.required' | translate}}</div>
+                            <div *ngIf="f.email.errors.email">{{'error.user.email.format' | translate}}</div>
                         </div>
                     </div>
                 </div>
 
                 <div class="row" style="padding-top: 10px;">
                     <div class="col-md-12">
-                        <div class="label_item">{{'Số điện thoại' | translate }}</div>
-                        <div>
-                            <div [innerHTML]="datas.phone" class="input_text"></div>
+                        <div class="label text-color">{{'unit.phone' | translate }} <span class="required-title">*</span></div>
+                        <div class="input-data fff">
+                            <input readonly type="text" formControlName="phone">
                         </div>
                     </div>
                 </div>
@@ -35,10 +46,10 @@
             </div>
 
             <div class="col-md-6">
-                <div class="label_item">{{'Phân quyền' | translate }}</div>
+                <div class="label text-color">{{'Phân quyền' | translate }} <span class="required-title">*</span></div>
                 <div>
-                    <p-listbox [options]="groupedRole" [group]="true" [(ngModel)]="datas.role" 
-                        [checkbox]="true" [multiple]="true"  [listStyle]="{'max-height':'300px'}" [style]="{'width':'100%'}">
+                    <p-listbox [options]="groupedRole" [group]="true" formControlName="role" [metaKeySelection]="false"
+                        [checkbox]="true" [filter]="true" [multiple]="true" [listStyle]="{'max-height':'300px'}" [style]="{'width':'100%'}">
                         <ng-template let-group pTemplate="group">
                             <div class="p-d-flex p-ai-center">
                                 <span>{{group.label | translate}}</span>
@@ -53,10 +64,6 @@
                 </div>
             </div>
         </div>
-
-        <div class="row" style="justify-content: center;padding-top: 10px;">
-            <button class="cancel-button" (click)="dialog.closeAll()" type="button">{{'btn.close' | translate}}</button>
-        </div>
-    </div>
+    </form>
   </div>
   
