add checkbox hoat dong/ko hoat dong

--- a/src/app/admin/admin-main/admin-user/admin-detail-user/admin-detail-user.component.html
+++ b/src/app/admin/admin-main/admin-user/admin-detail-user/admin-detail-user.component.html
@@ -63,6 +63,10 @@
                     </p-listbox>
                 </div>
             </div>
+
+            <div class="row" style="justify-content: center;padding-top: 10px;">
+                <button class="cancel-button" (click)="dialog.closeAll()" type="button">{{'btn.cancel' | translate}}</button>
+            </div>
         </div>
     </form>
   </div>
