--- a/src/app/main/role/detail-role/detail-role.component.scss
+++ b/src/app/main/role/detail-role/detail-role.component.scss
@@ -32,7 +32,8 @@
     .p-listbox .p-listbox-list{
        pointer-events: none;
     }
-    .p-listbox .p-listbox-header{
+    .p-listbox
+     .p-listbox-header{
         display: none;
     }
 }
