--- a/src/app/admin/admin-main/admin-unit/admin-unit.component.html
+++ b/src/app/admin/admin-main/admin-unit/admin-unit.component.html
@@ -1,20 +1,20 @@
 <div *ngIf="this.adminUnit === true" class="container-fluid">
     <div class="row">
-      <div class="col-md-3">
+      <div *ngIf="this.searchUnitRole === true" class="col-md-3">
         <div>{{'unit.code' | translate}}</div>
         <div class="input-line">
           <input type="text" [(ngModel)]="code" class="input_text"/>
         </div>
       </div>
-      <div class="col-md-3">
+      <div *ngIf="this.searchUnitRole === true" class="col-md-3">
         <div>{{'unit.name' | translate}}</div>
         <div class="input-line">
           <input type="text" [(ngModel)]="name" class="input_text"/>
         </div>
       </div>
       <div class="col-md-6 btn_search">
-        <button class="btn btn-lg btn-block btn_submit" (click)="searchUnit()">{{'btn.search' | translate }}</button>
-        <button class="btn btn-lg btn-block btn_submit" (click)="addUnit()">{{'btn.add' | translate }}</button>
+        <button *ngIf="this.searchUnitRole === true" class="btn btn-lg btn-block btn_submit" (click)="searchUnit()">{{'btn.search' | translate }}</button>
+        <button *ngIf="this.addUnitRole === true" class="btn btn-lg btn-block btn_submit" (click)="addUnit()">{{'btn.add' | translate }}</button>
       </div>
     </div>
     <div class="row" style="padding-top: 20px;">
