--- a/src/app/main/contract/add-contract/add-contract.component.html
+++ b/src/app/main/contract/add-contract/add-contract.component.html
@@ -1,5 +1,5 @@
 <!--xử lý gọi các component trong các step theo từng điều kiện-->
-<div *ngIf="(action=='add' && (type == 1 && isQLHD_01) || (type == 2 && isQLHD_14) || (type == 3 && isQLHD_15)) || (action=='add-contract-connect' && isQLHD_11) || (action=='edit' && isQLHD_02) || (action=='copy' && isQLHD_08)"
+<div *ngIf="((action=='add' || action=='add-form' || action=='add-batch') && (type == 1 && isQLHD_01) || (type == 2 && isQLHD_14) || (type == 3 && isQLHD_15)) || (action=='add-contract-connect' && isQLHD_11) || (action=='edit' && isQLHD_02) || (action=='copy' && isQLHD_08)"
     class="container-fluid">
     <app-contract-header *ngIf="type == 1 && (isQLHD_01 || this.action == 'edit')" #contractHeader [AddComponent]="this" [datas]="datas" [step]="step"
         (messageEvent)="receiveMessage($event)"></app-contract-header>
@@ -63,8 +63,8 @@
 </div>
 <div
     *ngIf="!(action=='add' && type == 1 && isQLHD_01) && 
-           !(action=='add' && type == 2 && isQLHD_14) && 
-           !(action=='add' && type == 3 && isQLHD_15) && 
+           !((action=='add' || action=='add-form') && type == 2 && isQLHD_14) && 
+           !((action=='add' || action=='add-batch') && type == 3 && isQLHD_15) && 
            !(action=='add-contract-connect' && isQLHD_11) && 
            !(action=='edit' && isQLHD_02) && 
            !(action=='copy' && isQLHD_08)">
