integrate api add unit

--- a/src/app/admin/admin-main/admin-unit/admin-unit.component.html
+++ b/src/app/admin/admin-main/admin-unit/admin-unit.component.html
@@ -37,7 +37,7 @@
                 </td>
                 <td>{{list.email}}</td>
                 <td style="text-align: center">
-                  <img src="../../../assets/img/icon_edit.svg" (click)="editUnit(list)" width="20px" style="cursor: pointer;"/>&nbsp;&nbsp;
+                  <img src="../../../assets/img/icon_edit.svg" (click)="editUnit(list.id)" width="20px" style="cursor: pointer;"/>&nbsp;&nbsp;
                   <img src="../../../assets/img/icon_delete.svg" width="16px" style="cursor: pointer;"/>
                 </td>
             </tr>
