--- a/src/app/admin/admin-main/admin-unit/admin-unit.component.scss
+++ b/src/app/admin/admin-main/admin-unit/admin-unit.component.scss
@@ -1,25 +1,3 @@
-.btn_submit{
-    border: 0px;
-    border-radius: 5px;
-    height: 33px;
-    box-sizing: border-box;
-    color: white;
-    background-color: #106DB6;
-    font-size: 13px;
-    margin: 0 10px;
-}
-.input_text {
-    padding-left: 10px;
-    outline: none;
-    height: 33px;
-    width: 100%;
-    border-radius: 5px;
-    border: 1px solid #106DB6;
-}
-.btn_search{
-    align-self: flex-end;
-}
-
 #table {
   border-collapse: collapse;
   width: 100%;
@@ -104,3 +82,42 @@
   padding: 8px 16px;
   text-align: right;
 } 
+
+.input-line {
+  display: flex;
+  justify-content: space-between;
+  position: relative;
+}
+
+.input-img {
+  padding: 10px;
+  cursor: pointer;
+}
+
+.search{
+  border: 1px solid #106DB6;
+  border-radius: 15px;
+  height: 38px;
+}
+
+.input-text {
+  border: 0;
+  padding: 10px;
+  width: 100%;
+  outline:0px;
+}
+
+.btn_search{
+  align-self: flex-end;
+  padding-top: 10px;
+}
+
+.btn_submit{
+  border: 0px;
+  border-radius: 5px;
+  height: 33px;
+  box-sizing: border-box;
+  color: white;
+  background-color: #106DB6;
+  font-size: 13px;
+}
