--- a/src/app/admin/admin-main/admin-unit/dialog/admin-filter-unit/admin-filter-unit.component.html
+++ b/src/app/admin/admin-main/admin-unit/dialog/admin-filter-unit/admin-filter-unit.component.html
@@ -37,6 +37,7 @@
             optionLabel="name"
             optionValue="id"
             placeholder="Chọn trạng thái"
+            [filter]="true" 
             [options]="statusList" 
           ></p-dropdown>
         </div>
