integrate api search

--- a/src/app/admin/admin-main/admin-unit/dialog/admin-filter-unit/admin-filter-unit.component.html
+++ b/src/app/admin/admin-main/admin-unit/dialog/admin-filter-unit/admin-filter-unit.component.html
@@ -1,4 +1,4 @@
-<div (messageEvent)="receiveMessage($event)" class="container-fluid">
+<div class="container-fluid">
   <div style="text-align: center; font-weight: bold">
     <h3 style="color: #106db6; font-family: inherit">{{ this.data.title }}</h3>
   </div>
@@ -39,6 +39,7 @@
             placeholder="Chọn trạng thái"
             [filter]="true" 
             [options]="statusList" 
+            name = "status"
           ></p-dropdown>
         </div>
       </div>
