fix form update

--- a/src/app/admin/admin-main/admin-user/admin-add-user/admin-add-user.component.html
+++ b/src/app/admin/admin-main/admin-user/admin-add-user/admin-add-user.component.html
@@ -18,7 +18,7 @@
                 {{ "error.unit.name.required" | translate }}
               </div>
               <div *ngIf="f.name.errors.pattern">
-                {{ "Tên tổ chức không được chứa ký tự đặc biệt" | translate }}
+                {{ "Tên người dùng không được chứa ký tự đặc biệt" | translate }}
               </div>
             </div>
           </div>
