--- a/src/app/admin/admin-main/admin-unit/admin-unit.component.html
+++ b/src/app/admin/admin-main/admin-unit/admin-unit.component.html
@@ -1,8 +1,8 @@
 <div *ngIf="this.adminUnit === true" class="container-fluid">
-  <div class="col-md-12">
+  <div *ngIf="this.searchUnitRole === true" class="col-md-12">
     <div class="input-line search">
       <img src="../../assets/img/icon_search.svg" class="input-img" />
-      <input
+      <input 
         type="text"
         id="filter_name"
         class="input-text"
@@ -20,7 +20,7 @@
     </div>
   </div>
   <div class="col-md-12 btn_search">
-    <button class="btn btn-lg btn-block btn_submit" (click)="addUnit()">
+    <button *ngIf="this.addUnitRole === true" class="btn btn-lg btn-block btn_submit" (click)="addUnit()">
       {{ "btn.add" | translate }}
     </button>
   </div>
