--- a/src/app/main/contract/form-contract/infor-contract-form/infor-contract-form.component.html
+++ b/src/app/main/contract/form-contract/infor-contract-form/infor-contract-form.component.html
@@ -27,7 +27,7 @@
 
           <div class="select-contract">
             <div class="div_file_attach">
-              <div *ngIf="this.listFileAttach.length == 0" style="color:gray">{{'choose.contract.file.attach' |
+              <div *ngIf="!this.datasForm.fileAttachForm || this.datasForm.fileAttachForm.length == 0" style="color:gray">{{'choose.contract.file.attach' |
                 translate }}</div>
               <div *ngFor="let item of this.datasForm.fileAttachForm; let i = index" style="width: 80%;">
                 {{item.filename ? item.filename : item.name}} <img *ngIf="item" style="cursor: pointer;" (click)="deleteFileAttach(item, i)"
