--- a/src/app/admin/admin-main/admin-pack/admin-pack.component.html
+++ b/src/app/admin/admin-main/admin-pack/admin-pack.component.html
@@ -1,15 +1,15 @@
 <div class="container-fluid">
-    <div class="col-md-12">
-      <div *ngIf="this.searchPackRole === true" class="input-line search">
+    <div class="col-md-12" style="display: flex;">
+      <div *ngIf="this.searchPackRole === true" class="input-line search" style="width: calc(100% - 100px)">
         <img src="../../assets/img/icon_search.svg" class="input-img" />
         <input type="text" id="filter_name" (keyup)="autoSearch($event)"  class="input-text" placeholder="{{'Nhập từ khóa tìm kiếm theo tên gói dịch vụ' | translate}}"
         (keyup)="autoSearch($event)" />
         <img src="../../assets/img/icon_search_group.svg" class="input-img"  (click)="search()"/>
       </div>
+      <div class="col-md-12 btn_search" style="width: 100px">
+        <button *ngIf="this.addPackRole === true" class="btn btn-lg btn-block btn_submit" (click)="addPack()">{{'btn.add' | translate }}</button>
+      </div>  
     </div>
-    <div class="col-md-12 btn_search">
-      <button *ngIf="this.addPackRole === true" class="btn btn-lg btn-block btn_submit" (click)="addPack()">{{'btn.add' | translate }}</button>
-    </div>  
     <div class="row" style="padding-top: 10px;">
       <p-table [value]="listData" [paginator]="true" [rows]="15" id="table" [autoLayout]="true">
         <ng-template pTemplate="header" let-columns>
