--- a/src/app/admin/admin-main/admin-unit/admin-unit.component.scss
+++ b/src/app/admin/admin-main/admin-unit/admin-unit.component.scss
@@ -109,13 +109,14 @@
 
 .btn_search{
   align-self: flex-end;
-  padding-left : 5px;
+  padding-top : 10px;
+  
 }
 
 .btn_submit{
   border: 0px;
   border-radius: 5px;
-  height: 36px;
+  height: 33px;
   box-sizing: border-box;
   color: white;
   background-color: #106DB6;
