--- a/src/app/main/contract-signature/components/contract-coordination/shared/model/sample-contract/sample-contract.component.html
+++ b/src/app/main/contract-signature/components/contract-coordination/shared/model/sample-contract/sample-contract.component.html
@@ -42,7 +42,7 @@
                         (change)="changePositionSign($event, null, 'name-signature')" [disabled]="isEnableSelect">
                         <option value="" hidden>Chọn người ký</option>
                         <option *ngFor="let d of this.list_sign_name, let i = index" [selected]="d.selected"
-                            value="{{d.id}}" [disabled]="d.is_disable">{{getName(d)}}</option>
+                            value="{{d.email}}" [disabled]="d.is_disable">{{getName(d)}}</option>
                     </select>
                 </div>
 
