--- a/src/app/admin/admin-main/admin-pack/admin-add-pack/admin-add-pack.component.html
+++ b/src/app/admin/admin-main/admin-pack/admin-add-pack/admin-add-pack.component.html
@@ -46,7 +46,7 @@
     <div class="row" style="padding-top: 10px">
       <div class="col-md-6">
         <div class="label text-color">
-          {{ "Đơn giá (VND)" | translate }}
+          {{ "Đơn giá trước VAT (VND)" | translate }}
           <span class="required-title">*</span>
         </div>
         <div class="input-data">
@@ -66,12 +66,46 @@
 
       <div class="col-md-6">
         <div class="label text-color">
+          {{ "Đơn giá sau VAT (VND)" | translate }}
+          <span class="required-title">*</span>
+        </div>
+        <div class="input-data">
+          <input type="text" formControlName="price" />
+        </div>
+        <div *ngIf="submitted && f.price.errors" class="invalid">
+          <div *ngIf="f.price.errors.required">
+            {{ "Đơn giá không được để trống" | translate }}
+          </div>
+          <!-- dungpt -->
+          <!-- input cua don gia phai la so moi hop le -->
+          <div *ngIf="f.price.errors.pattern">
+            {{ "Đơn giá phải là số" | translate }}
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="row" style="padding-top: 10px">
+      <div class="col-md-6">
+        <div class="label text-color">{{ "Loại gói" | translate }}</div>
+        <p-dropdown
+          panelStyleClass="font"
+          [options]="loaiGoi"
+          optionLabel="name"
+          optionValue="id"
+          placeholder="Chọn loại gói"
+          [filter]="true"
+          filterBy="name"
+          [showClear]="true"
+        ></p-dropdown>
+      </div>
+
+      <div class="col-md-6">
+        <div class="label text-color">
           {{ "Thể thức tính" | translate }}
           <span class="required-title">*</span>
         </div>
 
-        <!-- dungpt -->
-        <!-- them combobox the thuc tinh -->
         <p-dropdown
           panelStyleClass="font"
           [options]="theThucTinh"
@@ -96,41 +130,18 @@
 
     <div class="row" style="padding-top: 10px">
       <div class="col-md-6">
-        <div class="label text-color">{{ "Loại gói" | translate }}</div>
-
-        <!-- dungpt -->
-        <!-- them combobox loai goi -->
-        <p-dropdown
-          panelStyleClass="font"
-          [options]="loaiGoi"
-          optionLabel="name"
-          optionValue="id"
-          placeholder="Chọn loại gói"
-          [filter]="true"
-          filterBy="name"
-          [showClear]="true"
-        ></p-dropdown>
-      </div>
-
-      <div class="col-md-6">
-        <div class="label text-color">
-          {{ "Điều kiện áp dụng" | translate }}
-        </div>
-        <div class="input-data">
-          <input type="text" formControlName="condition" />
-        </div>
-      </div>
-    </div>
-
-    <div class="row" style="padding-top: 10px">
-      <div class="col-md-6">
         <div class="label text-color">
           {{ "Thời gian (tháng)" | translate }}
           <span class="required-title">*</span>
         </div>
-        <div class="input-data" [ngClass]="{
-          'fff':  this.flagComboBoxTheThucTinh == 2 || this.flagComboBoxTheThucTinh == 3
-        }">
+        <div
+          class="input-data"
+          [ngClass]="{
+            fff:
+              this.flagComboBoxTheThucTinh == 2 ||
+              this.flagComboBoxTheThucTinh == 3
+          }"
+        >
           <!-- dungpt -->
           <!-- tao ngModel va  name cho input thoi gian -->
           <input
@@ -144,7 +155,7 @@
           <div *ngIf="f.time.errors.required">
             {{ "Thời gian không được để trống" | translate }}
           </div>
-           <!-- dungpt -->
+          <!-- dungpt -->
           <!-- input cua thoi gian phai la so moi hop le -->
           <div *ngIf="f.time.errors.pattern">
             {{ "Thời gian phải là số" | translate }}
@@ -157,9 +168,14 @@
           {{ "Số lượng hợp đồng" | translate }}
           <span class="required-title">*</span>
         </div>
-        <div class="input-data" [ngClass]="{
-          'fff':  this.flagComboBoxTheThucTinh == 1 || this.flagComboBoxTheThucTinh == 3
-        }">
+        <div
+          class="input-data"
+          [ngClass]="{
+            fff:
+              this.flagComboBoxTheThucTinh == 1 ||
+              this.flagComboBoxTheThucTinh == 3
+          }"
+        >
           <input
             type="text"
             [(ngModel)]="numberContractName"
@@ -171,7 +187,7 @@
           <div *ngIf="f.number_contract.errors.required">
             {{ "Số lượng hợp đồng không được để trống" | translate }}
           </div>
-           <!-- dungpt -->
+          <!-- dungpt -->
           <!-- input cua so luong hop dong phai la so moi hop le -->
           <div *ngIf="f.number_contract.errors.pattern">
             {{ "Số lượng hợp đồng phải là số" | translate }}
@@ -184,7 +200,7 @@
       <div class="col-md-6">
         <div class="label text-color">{{ "Mô tả" | translate }}</div>
         <div class="input-data">
-          <input type="text" formControlName="describe" />
+          <input style="height: 80px;" type="text" formControlName="describe" />
         </div>
         <div *ngIf="submitted && f.describe.errors" class="invalid">
           <div *ngIf="f.describe.errors.pattern">
