edit form danh sach goi dich vu

--- a/src/app/admin/admin-main/admin-pack/admin-pack.component.html
+++ b/src/app/admin/admin-main/admin-pack/admin-pack.component.html
@@ -58,9 +58,10 @@
             >
           </td>
           <td>{{ list.code }}</td>
-          <td>{{ list.time }}</td>
-          <td>{{ list.numberContract }}</td>
-          <td>{{ list.price }}</td>
+          <td>{{ list.duration }}</td>
+          <td>{{ list.numberOfContracts }}</td>
+          <td>{{ list.totalBeforeVAT }}</td>
+          <td>{{ list.totalBeforeVAT }}</td>
           <td
             *ngIf="
               !(this.editPackRole === false && this.deletePackRole === false)
