--- a/src/app/admin/admin-main/admin-pack/admin-pack.component.html
+++ b/src/app/admin/admin-main/admin-pack/admin-pack.component.html
@@ -10,6 +10,7 @@
         placeholder="{{
           'Nhập từ khóa tìm kiếm theo tên gói dịch vụ' | translate
         }}"
+        [(ngModel)]="filterSearch"
         (keyup)="autoSearch($event)"
       />
       <img
