--- a/src/app/admin/admin-main/admin-pack/dialog/admin-filter-pack/admin-filter-pack.component.html
+++ b/src/app/admin/admin-main/admin-pack/dialog/admin-filter-pack/admin-filter-pack.component.html
@@ -23,14 +23,14 @@
             <div class="col-md-6">
                 <div class="label text-color">Đơn giá trước VAT</div>
                 <div class="input-data">
-                    <input type="text" formControlName="totalBeforeVAT">
+                    <input type="text" formControlName="filter_totalBeforeVAT">
                 </div>
             </div>
         
             <div class="col-md-6">
                 <div class="label text-color">Đơn giá sau VAT</div>
                 <div class="input-data">
-                    <input type="text" formControlName="totalAfterVAT">
+                    <input type="text" formControlName="filter_totalAfterVAT">
                 </div>
             </div>
         </div>
