--- a/src/app/admin/admin-main/admin-unit/admin-detail-unit/admin-detail-unit.component.html
+++ b/src/app/admin/admin-main/admin-unit/admin-detail-unit/admin-detail-unit.component.html
@@ -8,7 +8,7 @@
             <div class="col-md-4">  
                 <div class="label_item">{{'unit.name' | translate }}</div>
                 <div>
-                    <div [innerHTML]="datas.name" class="input_text"></div>
+                    <div [innerHTML]='datas.name' class="input_text"></div>
                 </div>
             </div>
 
@@ -31,7 +31,7 @@
             <div class="col-md-4">
                 <div class="label_item">{{'Mã số thuế' | translate }}</div>
                 <div>
-                    <div [innerHTML]="datas.tax_code" class="input_text"></div>
+                    <div [innerHTML]="datas.taxCode" class="input_text"></div>
                 </div>
             </div>
         
@@ -54,7 +54,7 @@
             <div class="col-md-4">
                 <div class="label_item">{{'Người đại diện' | translate }}</div>
                 <div>
-                    <div [innerHTML]="datas.representatives" class="input_text"></div>
+                    <div [innerHTML]="datas.representative" class="input_text"></div>
                 </div>
             </div>
         
@@ -68,7 +68,7 @@
             <div class="col-md-4">
                 <div class="label_item">{{'unit.fax' | translate }}</div>
                 <div>
-                    <div [innerHTML]="datas.fax" class="input_text"></div>
+                    <div [innerHTML]="datas.size" class="input_text"></div>
                 </div>
             </div>
         </div>
@@ -76,7 +76,7 @@
         <div class="row" style="padding-top: 10px;">
             <div class="col-md-6" style="align-self: center;">
                 <input type="radio" checked style="outline: none;">
-                <span> {{(datas.status==1?'unit.active' : 'unit.inactive') | translate}}</span>
+                <span> {{(datas.status=='ACTIVE'?'unit.active' : 'unit.inactive') | translate}}</span>
             </div>
         </div>
 
