integrate api dropdown

--- a/src/app/admin/admin-main/admin-unit/admin-add-pack-unit/admin-add-pack-unit.component.html
+++ b/src/app/admin/admin-main/admin-unit/admin-add-pack-unit/admin-add-pack-unit.component.html
@@ -9,7 +9,13 @@
           {{ "Mã gói dịch vụ" | translate }}
           <span class="required-title">*</span>
         </div>
-        <p-dropdown placeholder="Chọn gói dịch vụ"> </p-dropdown>
+        <p-dropdown 
+        placeholder="Chọn gói dịch vụ"
+        [filter]="true"
+        filterBy="name"
+        [showClear]="true"
+        [options]="danhSachGoiDichVu"
+        > </p-dropdown>
       </div>
 
       <div class="col-md-6">
