--- a/src/app/admin/admin-main/admin-unit/admin-detail-unit/admin-detail-unit.component.html
+++ b/src/app/admin/admin-main/admin-unit/admin-detail-unit/admin-detail-unit.component.html
@@ -112,7 +112,7 @@
         </p-table>
 
         <div class="row" style="justify-content: right;">
-            <button class="btn btn-lg btn-block btn_submit" (click)="addPack(1)">{{'Thêm gói dịch vụ' | translate }}</button>
+            <button class="btn btn-lg btn-block btn_submit" (click)="addPack()">{{'Thêm gói dịch vụ' | translate }}</button>
         </div>
 
         <div class="row" style="justify-content: center;padding-top: 10px;">
