--- a/src/app/admin/admin-main/admin-unit/admin-add-pack-unit/admin-add-pack-unit.component.html
+++ b/src/app/admin/admin-main/admin-unit/admin-add-pack-unit/admin-add-pack-unit.component.html
@@ -9,13 +9,15 @@
           {{ "Mã gói dịch vụ" | translate }}
           <span class="required-title">*</span>
         </div>
-        <p-dropdown 
-        placeholder="Chọn gói dịch vụ"
-        [filter]="true"
-        filterBy="name"
-        [showClear]="true"
-        [options]="danhSachGoiDichVu"
-        > </p-dropdown>
+        <p-dropdown
+          placeholder="Chọn gói dịch vụ"
+          [filter]="true"
+          filterBy="name"
+          [showClear]="true"
+          [options]="listCodeDichVu"
+          (onChange)="onChangeMaGoi($event)"
+        >
+        </p-dropdown>
       </div>
 
       <div class="col-md-6">
@@ -24,7 +26,7 @@
           <span class="required-title">*</span>
         </div>
         <div class="input-data fff">
-          <input type="text" [readonly]="true" />
+          <input type="text" value="{{ namePack }}" [readonly]="true" />
         </div>
         <div class="invalid"></div>
       </div>
@@ -33,21 +35,21 @@
     <div class="row" style="padding-top: 10px">
       <div class="col-md-6">
         <div class="label text-color">
-          {{ "Đơn giá (VND)" | translate }}
+          {{ "Đơn giá trước VAT (VND)" | translate }}
           <span class="required-title">*</span>
         </div>
         <div class="input-data fff">
-          <input type="text" readonly />
+          <input type="text" value="{{totalBeforeVAT}}" readonly />
         </div>
       </div>
 
       <div class="col-md-6">
         <div class="label text-color">
-          {{ "Thể thức tính" | translate }}
+          {{ "Đơn giá sau VAT (VND)" | translate }}
           <span class="required-title">*</span>
         </div>
         <div class="input-data fff">
-          <input type="text" readonly />
+          <input type="text" value="{{totalAfterVAT}}" readonly />
         </div>
       </div>
     </div>
@@ -56,7 +58,7 @@
       <div class="col-md-6">
         <div class="label text-color">{{ "Thời gian *" | translate }}</div>
         <div class="input-data fff">
-          <input type="text" readonly />
+          <input type="text" value="{{duration}}" readonly />
         </div>
       </div>
 
@@ -65,7 +67,7 @@
           {{ "Số lượng hợp đồng *" | translate }}
         </div>
         <div class="input-data fff">
-          <input type="text" readonly />
+          <input type="text" value="{{numberOfContracts}}" readonly />
         </div>
       </div>
     </div>
@@ -76,21 +78,20 @@
           {{ "Loại gói dịch vụ" | translate }}
           <span class="required-title">*</span>
         </div>
-        <div class="input-data">
+        <div class="input-data fff">
           <!-- dungpt -->
           <!-- tao ngModel va  name cho input thoi gian -->
-          <input type="text" />
+          <input type="text" value="{{type}}" readonly />
         </div>
       </div>
 
       <div class="col-md-6">
         <div class="label text-color">
-          {{ "Điều kiện" | translate }}
+          {{ "Thể thức tính" | translate }}
+          <span class="required-title">*</span>
         </div>
         <div class="input-data fff">
-          <!-- dungpt -->
-          <!-- tao ngModel va  name cho input so luong hop dong -->
-          <input type="text" readonly />
+          <input type="text" value="{{calculatorMethod}}" readonly />
         </div>
       </div>
     </div>
